[tool.poetry]
name = "wp-5005-proxy"
version = "0.1.0"
description = "Synthesize an RFC5005 feed from a WordPress site"
authors = ["Jamey Sharp <jamey@minilop.net>"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.16.1"
starlette = "^0.14.1"
uvicorn = "^0.13.3"
defusedxml = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-black = "^0.3.12"
pytest-cov = "^2.10.1"
pytest-flakes = "^4.0.3"
pytest-httpx = "^0.10.1"
pytest-mypy = "^0.8.0"
black = {version = "^20.8b1", allow-prereleases = true}

[tool.pytest.ini_options]
addopts = """\
  --mypy \
  --doctest-modules \
  --cov-report html --cov-report term:skip-covered --no-cov-on-fail \
"""

[tool.coverage.run]
source = ["app.py"]

[tool.coverage.report]
skip_empty = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
